chnages added status in customers and added product image url
